@@ -1,12 +1,14 @@
 package doston.code.service;
 
+import doston.code.dto.request.BookFilterDTO;
 import doston.code.dto.request.BookRequestDTO;
 import doston.code.dto.response.BookResponseDTO;
 import doston.code.entity.Book;
-import doston.code.exception.DataExistsException;
 import doston.code.exception.DataNotFoundException;
 import doston.code.mapper.BookMapper;
 import doston.code.repository.BookRepository;
+import doston.code.repository.custom.CustomBookRepository;
+import io.jsonwebtoken.lang.Collections;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -19,13 +21,16 @@ import java.util.stream.Collectors;
 public class BookService {
 
     private final BookRepository bookRepository;
+    private final CustomBookRepository customBookRepository;
     private final AuthorService authorService;
     private final GenreService genreService;
+    private final BookGenreService bookGenreService;
     private final BookMapper bookMapper;
 
+    // bunda 2 Book object yaratilinyabdi, shuni keyinroq optimize qilish kerak
     public BookResponseDTO addBook(BookRequestDTO requestDTO) {
 
-        validateRequestData(requestDTO, null);
+        validateRequestData(requestDTO);
 
         Book newBook = bookMapper.toEntity(requestDTO);
 
@@ -33,7 +38,13 @@ public class BookService {
         newBook.setVisible(Boolean.TRUE);
 
         Book savedBook = bookRepository.save(newBook);
+        Long newBookId = savedBook.getId();
+
+        bookGenreService.merge(newBookId, requestDTO.genreIdList());
+
+
         return bookMapper.toDto(savedBook);
+
     }
 
 
@@ -41,15 +52,16 @@ public class BookService {
 
         Book oldBook = getEntityById(bookId);
 
-        validateRequestData(requestDTO, bookId);
+        validateRequestData(requestDTO);
 
         oldBook.setTitle(requestDTO.title());
         oldBook.setAuthorId(requestDTO.authorId());
-        oldBook.setGenreId(requestDTO.genreId());
         oldBook.setCount(requestDTO.count());
         oldBook.setUpdatedDate(LocalDateTime.now());
 
         Book savedBook = bookRepository.save(oldBook);
+        bookGenreService.merge(bookId, requestDTO.genreIdList());
+
 
         return bookMapper.toDto(savedBook);
 
@@ -80,16 +92,35 @@ public class BookService {
         if (title == null && author == null) {
             throw new IllegalArgumentException("At least title or author name should be given");
         }
-        List<Book> books = bookRepository.searchBooks(title, author);
+
+        List<Book> books = customBookRepository.searchBooks(title, author);
 
         if (books.isEmpty()) {
             throw new DataNotFoundException("No matched book found");
         }
         return books.stream()
                 .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+
+    public List<BookResponseDTO> filterBooks(BookFilterDTO filterDTO) {
+
+        //nimagadur check qilishim kerak
+
+
+        List<Book> books = customBookRepository.filter(filterDTO);
+
+        if (books.isEmpty()) {
+            return List.of();
+        }
+
+        return books.stream()
+                .map(bookMapper::toDto)
+                .toList();
+
+
+    }
 
     public void deleteBookById(Long bookId) {
 
@@ -99,6 +130,7 @@ public class BookService {
             throw new DataNotFoundException("Book not found with ID: " + bookId);
         }
     }
+
 
     public Boolean existsById(Long bookId) {
         if (bookId == null) {
@@ -118,22 +150,17 @@ public class BookService {
     }
 
 
-    private void validateRequestData(BookRequestDTO requestDTO, Long bookId) {
-
-
-        Book existingBook = bookRepository.findByTitle(requestDTO.title());
-        if (existingBook != null && (!existingBook.getId().equals(bookId))) {
-            throw new DataExistsException("Book with title: " + requestDTO.title() + " already exists");
-        }
+    private void validateRequestData(BookRequestDTO requestDTO) {
 
 
         if (!authorService.existsById(requestDTO.authorId())) {
             throw new DataNotFoundException("Author not found with ID: " + requestDTO.authorId());
         }
 
-        if (!genreService.existsById(requestDTO.genreId())) {
-            throw new DataNotFoundException("Genre not found with ID: " + requestDTO.genreId());
+        if (!genreService.existsByIdList(requestDTO.genreIdList())) {
+            throw new DataNotFoundException("One or more genres not found for IDs: " + requestDTO.genreIdList());
         }
+
     }
 
 
